// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeslot handles change correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Timeslot
    available={
      Object {
        "end": 720,
        "start": 480,
      }
    }
    date={2018-05-27T21:00:00.000Z}
    end={720}
    onSubmit={[Function]}
    split={40}
    start={600}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <TimeslotDrag
          available={
            Object {
              "end": 720,
              "start": 480,
            }
          }
          end={720}
          onChange={[Function]}
          split={40}
          start={600}
        />,
        <TimeslotInput
          available={
            Object {
              "end": 720,
              "start": 480,
            }
          }
          onChange={[Function]}
        />,
        <button
          className="btn btn-lg btn-red"
          onClick={[Function]}
        >
          Submit
        </button>,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "available": Object {
            "end": 720,
            "start": 480,
          },
          "end": 720,
          "onChange": [Function],
          "split": 40,
          "start": 600,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "available": Object {
            "end": 720,
            "start": 480,
          },
          "onChange": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Submit",
          "className": "btn btn-lg btn-red",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Submit",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <TimeslotDrag
            available={
              Object {
                "end": 720,
                "start": 480,
              }
            }
            end={720}
            onChange={[Function]}
            split={40}
            start={600}
          />,
          <TimeslotInput
            available={
              Object {
                "end": 720,
                "start": 480,
              }
            }
            onChange={[Function]}
          />,
          <button
            className="btn btn-lg btn-red"
            onClick={[Function]}
          >
            Submit
          </button>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "available": Object {
              "end": 720,
              "start": 480,
            },
            "end": 720,
            "onChange": [Function],
            "split": 40,
            "start": 600,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "available": Object {
              "end": 720,
              "start": 480,
            },
            "onChange": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Submit",
            "className": "btn btn-lg btn-red",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Submit",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Timeslot handles change correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Timeslot
    available={
      Object {
        "end": 720,
        "start": 480,
      }
    }
    date={2018-05-27T21:00:00.000Z}
    end={720}
    onSubmit={[Function]}
    split={40}
    start={600}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <TimeslotDrag
          available={
            Object {
              "end": 720,
              "start": 480,
            }
          }
          end={720}
          onChange={[Function]}
          split={40}
          start={600}
        />,
        <TimeslotInput
          available={
            Object {
              "end": 720,
              "start": 480,
            }
          }
          onChange={[Function]}
        />,
        <button
          className="btn btn-lg btn-red"
          onClick={[Function]}
        >
          Submit
        </button>,
      ],
      "className": "container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "available": Object {
            "end": 720,
            "start": 480,
          },
          "end": 720,
          "onChange": [Function],
          "split": 40,
          "start": 600,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "available": Object {
            "end": 720,
            "start": 480,
          },
          "onChange": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Submit",
          "className": "btn btn-lg btn-red",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Submit",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <TimeslotDrag
            available={
              Object {
                "end": 720,
                "start": 480,
              }
            }
            end={720}
            onChange={[Function]}
            split={40}
            start={600}
          />,
          <TimeslotInput
            available={
              Object {
                "end": 720,
                "start": 480,
              }
            }
            onChange={[Function]}
          />,
          <button
            className="btn btn-lg btn-red"
            onClick={[Function]}
          >
            Submit
          </button>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "available": Object {
              "end": 720,
              "start": 480,
            },
            "end": 720,
            "onChange": [Function],
            "split": 40,
            "start": 600,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "available": Object {
              "end": 720,
              "start": 480,
            },
            "onChange": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Submit",
            "className": "btn btn-lg btn-red",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Submit",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Timeslot initializes correctly 1`] = `
<div
  className="container"
>
  <div
    className="dragContainer"
    style={
      Object {
        "height": 400,
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      className="dragableContainer unavailable"
      style={
        Object {
          "height": 400,
          "top": 0,
        }
      }
    >
      <p
        style={
          Object {
            "top": "5px",
          }
        }
      >
        8:00
      </p>
      <hr
        style={
          Object {
            "top": 65.66666666666667,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 130.33333333333334,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 195,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 259.6666666666667,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 324.33333333333337,
          }
        }
      />
      <p
        style={
          Object {
            "bottom": "5px",
          }
        }
      >
        12:00
      </p>
    </div>
    <div
      className="dragableContainer"
      style={
        Object {
          "height": 400,
          "top": 0,
        }
      }
    >
      <p
        style={
          Object {
            "top": "5px",
          }
        }
      >
        8:00
      </p>
      <p
        style={
          Object {
            "bottom": "5px",
          }
        }
      >
        12:00
      </p>
      <div
        className="timeslot-dragball"
        draggable="true"
        onDrag={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
        onTouchMove={[Function]}
        style={
          Object {
            "height": 12,
            "top": -6,
            "width": 12,
          }
        }
      />
      <div
        className="timeslot-dragball"
        draggable="true"
        onDrag={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
        onTouchMove={[Function]}
        style={
          Object {
            "bottom": -6,
            "height": 12,
            "width": 12,
          }
        }
      />
    </div>
  </div>
  <div>
    <div
      className="timeslot-input"
    >
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="8:00"
      />
      <p>
        -
      </p>
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="12:00"
      />
    </div>
  </div>
  <button
    className="btn btn-lg btn-red"
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`Timeslot initializes correctly 2`] = `
<div
  className="container"
>
  <div
    className="dragContainer"
    style={
      Object {
        "height": 400,
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      className="dragableContainer unavailable"
      style={
        Object {
          "height": 400,
          "top": 0,
        }
      }
    >
      <p
        style={
          Object {
            "top": "5px",
          }
        }
      >
        12:20
      </p>
      <hr
        style={
          Object {
            "top": 15,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 29,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 43,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 57,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 71,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 85,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 99,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 113,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 127,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 141,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 155,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 169,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 183,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 197,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 211,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 225,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 239,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 253,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 267,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 281,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 295,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 309,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 323,
          }
        }
      />
      <hr
        style={
          Object {
            "top": 337,
          }
        }
      />
      <p
        style={
          Object {
            "bottom": "5px",
          }
        }
      >
        20:40
      </p>
    </div>
    <div
      className="dragableContainer"
      style={
        Object {
          "height": 192,
          "top": 96,
        }
      }
    >
      <p
        style={
          Object {
            "top": "5px",
          }
        }
      >
        14:20
      </p>
      <p
        style={
          Object {
            "bottom": "5px",
          }
        }
      >
        18:20
      </p>
      <div
        className="timeslot-dragball"
        draggable="true"
        onDrag={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
        onTouchMove={[Function]}
        style={
          Object {
            "height": 12,
            "top": -6,
            "width": 12,
          }
        }
      />
      <div
        className="timeslot-dragball"
        draggable="true"
        onDrag={[Function]}
        onDragEnd={[Function]}
        onDragStart={[Function]}
        onTouchMove={[Function]}
        style={
          Object {
            "bottom": -6,
            "height": 12,
            "width": 12,
          }
        }
      />
    </div>
  </div>
  <div>
    <div
      className="timeslot-input"
    >
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="14:20"
      />
      <p>
        -
      </p>
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onKeyPress={[Function]}
        type="text"
        value="18:20"
      />
    </div>
  </div>
  <button
    className="btn btn-lg btn-red"
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;
